Fix horizontal scrolling bug
* Fix bug where it was possible to scroll horizontally on the work modal

--- a/css/_modal.scss
+++ b/css/_modal.scss
@@ -22,7 +22,6 @@
     z-index: 1;
     opacity: 1;
     left: -100%;
-    position: absolute;
     height: 200%;
   }
 
